samples/_failures_safe/1761690956_e560bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46dcd5b3.c: In function ‘main’:
./samples/SAFE/__tmp_46dcd5b3.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
